TouchScreen Controls added
Pressing Shift+Enter opens up the CommandFrame window that allows for touchscreen control over Angle, Scale, TranX, TranY, and 6 color coded buttons to switch PaintMode